[package]
name = "egui_template_copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "cargo", "wrap_help"] }
copy_dir = "0.1.3"
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
